--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -625,7 +625,7 @@ pre tt:after {
 
 /* custom css */
 body {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .short-bio {
@@ -636,6 +636,7 @@ body {
 
 ul {
   display: flex;
+  margin: 0;
 }
 
 li {
@@ -644,7 +645,8 @@ li {
 }
 
 li a {
-  color: #00b2d7;
+  /* color: #00b2d7; */
+  color: white;
   text-decoration: none;
 }
 
