--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -4,7 +4,8 @@
 
 // Colors
 $color-base: #222;
-$color-primary: #5d93ff;
+$color-primary: #1c9963;
+// $color-primary: #5d93ff;
 $color-secondary: #f7a046;
 
 $color-white: #fff;
