Display read times

--- a/src/components/Feed/Feed.module.scss
+++ b/src/components/Feed/Feed.module.scss
@@ -40,6 +40,11 @@
         text-transform: uppercase;
       }
 
+      &-read-time-separator {
+        display: inline-block;
+        margin: 0 5px;
+      }
+
       &-divider {
         margin: 0 5px;
       }
