Add closures in 6 minutes

--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -34,9 +34,11 @@
     &:focus {
       color: $color-primary;
     }
-
   }
 
+  iframe {
+    display: block;
+  }
 }
 
 @include breakpoint-md {
@@ -54,9 +56,7 @@
       max-width: auto;
       margin: 0;
       top: 30px;
-      left: 30px
+      left: 30px;
     }
-
   }
-
 }
