--- a/src/components/EmailSignup/EmailSignup.scss
+++ b/src/components/EmailSignup/EmailSignup.scss
@@ -10,10 +10,6 @@
     margin-bottom: 20px;
   }
 
-  h3 {
-    margin: 0;
-  }
-
   label {
     display: block;
   }
@@ -28,6 +24,7 @@
       padding: 16px;
       border: 1px solid rgb(211, 211, 211);
       width: 100%;
+      font-size: 16px;
     }
 
     &::placeholder {
@@ -41,10 +38,14 @@
       width: 100%;
       color: white;
       margin-bottom: 20px;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 
   p {
-    margin: 0;
+    // margin: 0;
   }
 }
