--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -43,3 +43,6 @@ $layout-width: 1070px;
 $layout-breakpoint-sm: 685px;
 $layout-breakpoint-md: 960px;
 $layout-breakpoint-lg: 1100px;
+
+// Email
+$email-border-radius: 30px;
