--- a/src/components/EmailSignup/EmailSignup.scss
+++ b/src/components/EmailSignup/EmailSignup.scss
@@ -4,7 +4,7 @@
   text-align: center;
   padding: 40px;
   background-color: white;
-  border-radius: 4px;
+  border-radius: $email-border-radius;
   max-width: $layout-post-width;
   margin: 0 auto;
 
@@ -21,9 +21,13 @@
   input,
   button {
     margin: 10px 0;
-    border-radius: 4px;
+    border-radius: $email-border-radius;
     max-width: 300px;
     font-size: 16px;
+
+    &:focus {
+      border-radius: $email-border-radius;
+    }
   }
 
   input {
@@ -33,9 +37,9 @@
   }
 
   button {
+    max-width: 200px;
     background-color: $color-primary;
-
-    padding: 16px 50px;
+    padding: 16px;
     width: 100%;
     color: white;
     margin-bottom: 20px;
